BB-002: cors, securityHeader correlationId added